--- a/vignettes/4.0-partitioning.md
+++ b/vignettes/4.0-partitioning.md
@@ -1,26 +1,33 @@
 4 Intermedia Partitioning
 ================
-Jaap Slootweg, Joris Quik
-2023-12-04
+Jaap Slootweg, Joris Quik, Valerie de Rijk
+2024-07-18
 
-<!-- # Intermedia partitioning -->
+### Intermedia processing
 
-There are multiple transfers for substances from one matrix to the other
-(matrix in the sense of medium, like air or water). The speed of some of
-these transfers are calculated as processes; you will find them in
-SubCompartProcesses.csv. Other transfers are so quick and small that a
-continuous equilibrium is assumed. In this vignette will will focus on
-this intermedia partitioning. *\[… more detailed description to follow
-…\] test*
+#### Description of the process
 
-## Partitioning coefficients of substances
+This vignette describes chapter 3.4 of the Schoorl et al. (2015)
+paper.There are multiple transfers for substances from one matrix to the
+other (matrix in the sense of medium, like air or water). The speed of
+some of these transfers are calculated as processes; you will find them
+in SubCompartProcesses.csv. Other transfers are so quick and small that
+a continuous equilibrium is assumed. In this vignette will will focus on
+this intermedia partitioning. See the paper for additional description.
+
+#### Initializing World
+
+Before any calculations can be done, we need to initialize the World
+object again. We give opportuntiy to choose from 4 different molecule
+types.
+
+#### Partitioning coefficients of substances
 
 If “World” has found data for the substance you initiated with, this is
-perfect. But these properties are not always known. You can assess them
-by “models”; for Ksw a model is given by the fKsw function. Mind you;
-this is not not a variable defining function, and you will have to fetch
-the parameters yourself, and put the result in the core-data. We
-demonstrate how.
+perfect. But these properties are not always known. Therefore, SimpleBox
+has functions that approximate these parameters. In this part we will
+discuss the solid-water partioning coefficient (Ksw).Generally, all
+these functions are based on the paper (Schoorl et al., 2015).
 
 The function is given below, the parameters are: Kow, pKa, Corg, a, b,
 ChemClass and RHOsolid; The code is not nicely formatted by Rmd.
@@ -34,7 +41,7 @@ f_Ksw
     ## {
     ##     ifelse(alt_form, switch(ChemClass, acid = 10^(0.11 * log10(Kow) + 
     ##         1.54) * CorgStandard * RHOsolid/1000, base = 10^(pKa^0.65 * 
-    ##         (Kow/(1 + Kow)^0.14)) * CorgStandard * RHOsolid/1000, 
+    ##         (Kow/(1 + Kow))^0.14) * CorgStandard * RHOsolid/1000, 
     ##         {
     ##             a * Kow^b * CorgStandard * RHOsolid/1000
     ##         }), switch(ChemClass, acid = 10^(0.54 * log10(Kow) + 
@@ -44,49 +51,52 @@ f_Ksw
     ##             a * Kow^b * CorgStandard * RHOsolid/1000
     ##         }))
     ## }
+    ## <bytecode: 0x55744462c728>
 
-Does the database contain Kow, pKa, Corg…? If not we can store the
-result in the internal data of World by the function from the World
-object (method) World\$SetConst()
+If the substance does not have all constants as needed for this
+function, you can prescripe them through the function World\$SetConst.
 
 ``` r
 Kow <- World$fetchData("Kow")
 if(is.na(World$fetchData("Kow"))) {
   World$SetConst(Kow = 2750)
-  warning("Kow is missing in input data. This is not always provided by default, e.g. for metals. 
-Kow is set to 2750, corresponding to the default in the SB4nano excel version. This value is based on the median of all provided Kow of all substances in the excel version")
 }
+```
 
-World$fetchData("Corg")
+For this process, we need the standard organic carbon content
+(Corgstandard), instead of the Corg per compartment. The differences are
+examplified below.
+
+``` r
+Corg <- World$fetchData("Corg")
+print(Corg)
 ```
 
     ##            SubCompart Corg
-    ## 1                 air 0.10
-    ## 2          cloudwater 0.10
-    ## 3  freshwatersediment 0.05
-    ## 4        lakesediment 0.05
-    ## 5      marinesediment 0.05
-    ## 6    agriculturalsoil 0.02
-    ## 7         naturalsoil 0.02
-    ## 8           othersoil 0.02
-    ## 9           deepocean 0.10
-    ## 10               lake 0.10
+    ## 1    agriculturalsoil 0.02
+    ## 2                 air 0.10
+    ## 3          cloudwater 0.10
+    ## 4           deepocean 0.10
+    ## 5  freshwatersediment 0.05
+    ## 6                lake 0.10
+    ## 7        lakesediment 0.05
+    ## 8      marinesediment 0.05
+    ## 9         naturalsoil 0.02
+    ## 10          othersoil 0.02
     ## 11              river 0.10
     ## 12                sea 0.10
 
-Oeps, the CORG variable in the excel version is now a table in R of Corg
-for all subcompartments, we need StandardCorgSoil
-
 ``` r
 CorgStandard <- World$fetchData("CorgStandard")
+print(CorgStandard)
 ```
+
+    ## [1] 0.02
 
 pKa could be missing (e.g. in the case of “default substance”). If the
 substance is neutral, you can apply a value of 7. Variables a and b come
-from the QSARtable. RHOsolid can be taken from the Rho from the matrix
-of non-specific, standard soil, i.e. “othersoil” This “variable” is used
-in multiple formulas in the excel version, but because it’s only a copy
-it is more transparent to set it locally.
+from the QSARtable. RHOsolid can be taken from the matrix that is
+considered for the process.
 
 ``` r
 pKa <- World$fetchData("pKa")
@@ -97,6 +107,35 @@ if(is.na(pKa)) {
 
 Substance_ChemClass <- World$fetchData("ChemClass")
 QSARtable <- World$fetchData("QSARtable")
+print(QSARtable)
+```
+
+    ##      QSAR.ChemClass     a    b
+    ## 1      acetanilides 13.18 0.40
+    ## 2              acid    NA   NA
+    ## 3          alcohols  3.16 0.39
+    ## 4            amides 17.78 0.33
+    ## 5          anilines  7.08 0.62
+    ## 6              base    NA   NA
+    ## 7     benzonitriles 12.02 0.57
+    ## 8        carbamates 13.80 0.37
+    ## 9   dinitroanilines 83.18 0.38
+    ## 10           esters 11.22 0.49
+    ## 11     hydrophobics  1.26 0.81
+    ## 12            metal    NA   NA
+    ## 13          neutral  1.26 0.81
+    ## 14    nitrobenzenes  3.55 0.77
+    ## 15 non hydrophobics 10.47 0.52
+    ## 16    organic acids  3.16 0.47
+    ## 17    organic acids  2.09 0.60
+    ## 18          phenols 12.02 0.57
+    ## 19      phenylureas 11.22 0.49
+    ## 20       phosphates 14.79 0.49
+    ## 21        triazines 31.62 0.30
+    ## 22        triazoles 25.70 0.47
+    ## 23          uracils 13.80 0.37
+
+``` r
 QSARrecord <- QSARtable[QSARtable$QSAR.ChemClass == Substance_ChemClass,]
 RhoTable <- World$fetchData("rhoMatrix")
 RHOsolid <- RhoTable$rhoMatrix[RhoTable$SubCompart == "othersoil"]
@@ -105,10 +144,13 @@ KswModelled <- f_Ksw(Kow=Kow, pKa=pKa, CorgStandard=CorgStandard,
                      ChemClass=Substance_ChemClass,
                      RHOsolid=RHOsolid,
                      alt_form = F)
+print(KswModelled)
 ```
 
+    ## [1] 28.93139
+
 We now have all the parameters and can set the value for Ksw and know
-that the system will use our modelled Ksw
+that the system will use our modelled Ksw.
 
 ``` r
 World$SetConst(Ksw = KswModelled)
@@ -131,21 +173,22 @@ Ksw.alt
 ```
 
     ## function (Kow, pKa, CorgStandard, ChemClass, a, b, all.rhoMatrix, 
-    ##     Ksw) 
+    ##     KswDorC) 
     ## {
     ##     RHOsolid <- all.rhoMatrix$rhoMatrix[all.rhoMatrix$SubCompart == 
     ##         "naturalsoil"]
-    ##     f_Ksw(Kow, pKa, CorgStandard, a, b, ChemClass, RHOsolid, 
-    ##         TRUE, Ksw)
+    ##     f_Ksw(Kow = Kow, pKa = pKa, CorgStandard = CorgStandard, 
+    ##         a = a, b = b, ChemClass = ChemClass, RHOsolid = RHOsolid, 
+    ##         alt_form = TRUE, Ksw_orig = KswDorC)
     ## }
 
 ``` r
-World$NewCalcVariable("Ksw.alt")
+test <- World$NewCalcVariable("Ksw.alt")
 World$CalcVar("Ksw.alt")
 ```
 
-    ##  Ksw.alt 
-    ## 3.763309
+    ##          x  Ksw.alt
+    ## 1 3.763309 3.763309
 
 ``` r
 World$fetchData("Ksw.alt")
@@ -153,11 +196,12 @@ World$fetchData("Ksw.alt")
 
     ## [1] 3.763309
 
-## Fraction molecular species in original form (based on pKa)
+#### Fraction molecular species in original form (based on pKa)
 
-This is the fraction of a substance that is int he original form
-(non-disosciated) specific fraction that also relates to the pH of the
-compartment.
+We will now walk through some other calculated variables.
+
+This is the fraction of a substance that is in the original form
+(non-dissociated), which relates to the pH of the compartment.
 
 The FRorig for Matrix “air” is the FRorig of aerosols in air. The pH of
 “air” is set to 3 in the SubCompartSheet.csv, corresponding to “pH.aerw”
@@ -168,18 +212,18 @@ World$NewCalcVariable("FRorig")
 World$CalcVar("FRorig")
 ```
 
-    ##            SubCompart    FRorig
-    ## 1    agriculturalsoil 0.9686549
-    ## 2                 air 0.9999871
-    ## 4           deepocean 0.4370153
-    ## 5  freshwatersediment 0.9686549
-    ## 6                lake 0.8858769
-    ## 7        lakesediment 0.9686549
-    ## 8      marinesediment 0.7555189
-    ## 9         naturalsoil 0.9996765
-    ## 10          othersoil 0.9686549
-    ## 11              river 0.8858769
-    ## 12                sea 0.4370153
+    ##            SubCompart old_FRorig    FRorig
+    ## 1    agriculturalsoil  0.9686549 0.9686549
+    ## 2                 air  0.9999871 0.9999871
+    ## 3           deepocean  0.4370153 0.4370153
+    ## 4  freshwatersediment  0.9686549 0.9686549
+    ## 5                lake  0.8858769 0.8858769
+    ## 6        lakesediment  0.9686549 0.9686549
+    ## 7      marinesediment  0.7555189 0.7555189
+    ## 8         naturalsoil  0.9996765 0.9996765
+    ## 9           othersoil  0.9686549 0.9686549
+    ## 10              river  0.8858769 0.8858769
+    ## 11                sea  0.4370153 0.4370153
 
 ``` r
 World$fetchData("FRorig")
@@ -203,75 +247,75 @@ World$NewCalcVariable("FRorig_spw")
 World$CalcVar("FRorig_spw")
 ```
 
-    ##          SubCompart FRorig_spw
-    ## 1  agriculturalsoil  0.8858769
-    ## 9       naturalsoil  0.9987134
-    ## 10        othersoil  0.8858769
+    ##         SubCompart old_FRorig_spw FRorig_spw
+    ## 1 agriculturalsoil      0.8858769  0.8858769
+    ## 2      naturalsoil      0.9987134  0.9987134
+    ## 3        othersoil      0.8858769  0.8858769
 
-## Partitioning coeficients Kp
+#### Partitioning coeficient Kp
 
-FRorig is the FRaction original species, depending on pKa and pH for
-some substances. The partitioning of a subcompartment / water is Kp,
-which is also a OO state variable:
+The partitioning of a subcompartment / water is Kp, which is also an
+object-oriented state variable. This is dependent on many parameters, of
+which Ksw, Ksw_alt, FRorig and Corg are examples.See Schoorl et
+al. (2015) or the functions for the specific formulas.
 
 ``` r
 World$NewCalcVariable("Kp")
 World$CalcVar("Kp")
 ```
 
-    ##            SubCompart       Kp
-    ## 1    agriculturalsoil 11.25700
-    ## 4           deepocean 29.52429
-    ## 5  freshwatersediment 28.14249
-    ## 6                lake 52.11826
-    ## 7        lakesediment 28.14249
-    ## 8      marinesediment 22.77827
-    ## 9         naturalsoil 11.56930
-    ## 10          othersoil 11.25700
-    ## 11              river 52.11826
-    ## 12                sea 29.52429
+    ##            SubCompart   old_Kp       Kp
+    ## 1    agriculturalsoil 11.25700 11.25700
+    ## 2           deepocean 29.52429 29.52429
+    ## 3  freshwatersediment 28.14249 28.14249
+    ## 4                lake 52.11826 52.11826
+    ## 5        lakesediment 28.14249 28.14249
+    ## 6      marinesediment 22.77827 22.77827
+    ## 7         naturalsoil 11.56930 11.56930
+    ## 8           othersoil 11.25700 11.25700
+    ## 9               river 52.11826 52.11826
+    ## 10                sea 29.52429 29.52429
 
 ``` r
-#Kow.alt needed.
-
 World$NewCalcVariable("D")
 World$CalcVar("D")
 ```
 
-    ##            SubCompart        D
-    ## 1    agriculturalsoil 1017.161
-    ## 2                 air 1017.161
-    ## 3          cloudwater 1017.161
-    ## 4           deepocean 1017.161
-    ## 5  freshwatersediment 1017.161
-    ## 6                lake 1017.161
-    ## 7        lakesediment 1017.161
-    ## 8      marinesediment 1017.161
-    ## 9         naturalsoil 1017.161
-    ## 10          othersoil 1017.161
-    ## 11              river 1017.161
-    ## 12                sea 1017.161
+    ##            SubCompart    old_D        D
+    ## 1    agriculturalsoil 1017.161 1017.161
+    ## 2                 air 1017.161 1017.161
+    ## 3           deepocean 1017.161 1017.161
+    ## 4  freshwatersediment 1017.161 1017.161
+    ## 5                lake 1017.161 1017.161
+    ## 6        lakesediment 1017.161 1017.161
+    ## 7      marinesediment 1017.161 1017.161
+    ## 8         naturalsoil 1017.161 1017.161
+    ## 9           othersoil 1017.161 1017.161
+    ## 10              river 1017.161 1017.161
+    ## 11                sea 1017.161 1017.161
 
 ``` r
 World$NewCalcVariable("KpCOL")
 World$CalcVar("KpCOL")
 ```
 
-    ##    SubCompart    KpCOL
-    ## 3  cloudwater 81.37288
-    ## 4   deepocean 81.37288
-    ## 6        lake 81.37288
-    ## 11      river 81.37288
-    ## 12        sea 81.37288
+    ##   SubCompart old_KpCOL    KpCOL
+    ## 1  deepocean  81.37288 81.37288
+    ## 2       lake  81.37288 81.37288
+    ## 3      river  81.37288 81.37288
+    ## 4        sea  81.37288 81.37288
 
-## Dimensionless partition coefficients per compartment/scale
+#### Dimensionless partition coefficients per compartment/scale
 
-The substance specific air/water partition coefficient at 25 degrees
-Celsius (Kaw25) is required for the calculation of scale-specific
-partition coefficients of air/water, aerosol water/air, and aerosol
-solids/air. When not provided as input, it is calculated within the
-functions for the scale specific partition coefficients (and not first
-as a separate variable with CalcVar).
+Similar to the solid-water partitioning coefficient, partition
+coefficients for other compartments also need to be computed.
+
+*Air* The substance specific air/water partition coefficient at 25
+degrees Celsius (Kaw25) is required for the calculation of
+scale-specific partition coefficients of air/water, aerosol water/air,
+and aerosol solids/air. When not provided as input, it is calculated
+within the functions for the scale specific partition coefficients (and
+not first as a separate variable with CalcVar).
 
 ``` r
 World$fetchData("Kaw25")
@@ -285,12 +329,12 @@ World$NewCalcVariable("Kacompw")
 World$CalcVar("Kacompw")
 ```
 
-    ##         Scale      Kacompw
-    ## 1      Arctic 1.448155e-05
-    ## 2 Continental 7.474355e-05
-    ## 3    Moderate 7.474355e-05
-    ## 4    Regional 7.474355e-05
-    ## 5      Tropic 1.754308e-04
+    ##         Scale  old_Kacompw      Kacompw
+    ## 1      Arctic 1.448025e-05 1.448025e-05
+    ## 2 Continental 7.474398e-05 7.474398e-05
+    ## 3    Moderate 7.474398e-05 7.474398e-05
+    ## 4    Regional 7.474398e-05 7.474398e-05
+    ## 5      Tropic 1.754406e-04 1.754406e-04
 
 ``` r
 #Dimensionless aerosol water/air partition coefficient
@@ -298,12 +342,12 @@ World$NewCalcVariable("Kaerw")
 World$CalcVar("Kaerw")
 ```
 
-    ##    SubCompart       Scale     Kaerw
-    ## 6         air      Arctic 69054.263
-    ## 7         air    Moderate 13379.253
-    ## 8         air    Regional 13379.253
-    ## 9         air      Tropic  5700.326
-    ## 10        air Continental 13379.253
+    ##         Scale SubCompart old_Kaerw     Kaerw
+    ## 1      Arctic        air 69060.486 69060.486
+    ## 2 Continental        air 13379.177 13379.177
+    ## 3    Moderate        air 13379.177 13379.177
+    ## 4    Regional        air 13379.177 13379.177
+    ## 5      Tropic        air  5700.009  5700.009
 
 ``` r
 #Dimensionless aerosol solids/air partition coefficient
@@ -311,8 +355,10 @@ World$NewCalcVariable("Kaers")
 World$CalcVar("Kaers")
 ```
 
-    ##   SubCompart    Kaers
-    ## 2        air 706832.5
+    ##   SubCompart old_Kaers    Kaers
+    ## 1        air  706832.5 706832.5
+
+*Soil/Sediment*
 
 Calculating the partitioning between soil- or sediment and water
 requires the fractions of water and air in soil, in addition to some of
@@ -322,8 +368,7 @@ and “FRACa”) in “ScaleSubCompartData.csv” and can differ between both
 (combinations of) scale and compartment. The fraction of solids in soil
 and sediment is calculated based on FRACw and FRACa, except for the
 fraction of solids in air, where it is also provided as input. Input
-data is provided as subFRAC, FRACx is calculated. See
-[FRACwas.md](vignettes/5.%20Characteristics%20of%20the%20Environment/FRACwas.md "FRACwas.md").
+data is provided as subFRAC, FRACx is calculated.
 
 ``` r
 #fractions
@@ -331,168 +376,175 @@ World$fetchData("subFRACw")
 ```
 
     ##          Scale         SubCompart subFRACw
-    ## 1       Arctic                air    2e-11
-    ## 4       Arctic     marinesediment    8e-01
-    ## 5       Arctic        naturalsoil    2e-01
-    ## 7  Continental   agriculturalsoil    2e-01
-    ## 8  Continental                air    2e-11
-    ## 10 Continental freshwatersediment    8e-01
-    ## 12 Continental       lakesediment    8e-01
-    ## 13 Continental     marinesediment    8e-01
-    ## 14 Continental        naturalsoil    2e-01
-    ## 15 Continental          othersoil    2e-01
-    ## 18    Moderate                air    2e-11
-    ## 21    Moderate     marinesediment    8e-01
-    ## 22    Moderate        naturalsoil    2e-01
-    ## 24    Regional   agriculturalsoil    2e-01
-    ## 25    Regional                air    2e-11
-    ## 27    Regional freshwatersediment    8e-01
-    ## 29    Regional       lakesediment    8e-01
-    ## 30    Regional     marinesediment    8e-01
-    ## 31    Regional        naturalsoil    2e-01
-    ## 32    Regional          othersoil    2e-01
-    ## 35      Tropic                air    2e-11
-    ## 38      Tropic     marinesediment    8e-01
-    ## 39      Tropic        naturalsoil    2e-01
+    ## 2       Arctic                air    2e-11
+    ## 8       Arctic     marinesediment    8e-01
+    ## 9       Arctic        naturalsoil    2e-01
+    ## 13 Continental   agriculturalsoil    2e-01
+    ## 14 Continental                air    2e-11
+    ## 17 Continental freshwatersediment    8e-01
+    ## 19 Continental       lakesediment    8e-01
+    ## 20 Continental     marinesediment    8e-01
+    ## 21 Continental        naturalsoil    2e-01
+    ## 22 Continental          othersoil    2e-01
+    ## 26    Moderate                air    2e-11
+    ## 32    Moderate     marinesediment    8e-01
+    ## 33    Moderate        naturalsoil    2e-01
+    ## 37    Regional   agriculturalsoil    2e-01
+    ## 38    Regional                air    2e-11
+    ## 41    Regional freshwatersediment    8e-01
+    ## 43    Regional       lakesediment    8e-01
+    ## 44    Regional     marinesediment    8e-01
+    ## 45    Regional        naturalsoil    2e-01
+    ## 46    Regional          othersoil    2e-01
+    ## 50      Tropic                air    2e-11
+    ## 56      Tropic     marinesediment    8e-01
+    ## 57      Tropic        naturalsoil    2e-01
 
 ``` r
 World$fetchData("subFRACa")
 ```
 
     ##          Scale       SubCompart subFRACa
-    ## 5       Arctic      naturalsoil      0.2
-    ## 7  Continental agriculturalsoil      0.2
-    ## 14 Continental      naturalsoil      0.2
-    ## 15 Continental        othersoil      0.2
-    ## 22    Moderate      naturalsoil      0.2
-    ## 24    Regional agriculturalsoil      0.2
-    ## 31    Regional      naturalsoil      0.2
-    ## 32    Regional        othersoil      0.2
-    ## 39      Tropic      naturalsoil      0.2
+    ## 9       Arctic      naturalsoil      0.2
+    ## 13 Continental agriculturalsoil      0.2
+    ## 21 Continental      naturalsoil      0.2
+    ## 22 Continental        othersoil      0.2
+    ## 33    Moderate      naturalsoil      0.2
+    ## 37    Regional agriculturalsoil      0.2
+    ## 45    Regional      naturalsoil      0.2
+    ## 46    Regional        othersoil      0.2
+    ## 57      Tropic      naturalsoil      0.2
 
 ``` r
 World$NewCalcVariable("FRACa")
 World$CalcVar("FRACa")
 ```
 
-    ##          SubCompart       Scale FRACa
-    ## 3  agriculturalsoil    Regional   0.2
-    ## 5  agriculturalsoil Continental   0.2
-    ## 6               air      Arctic   1.0
-    ## 7               air      Tropic   1.0
-    ## 8               air    Regional   1.0
-    ## 9               air Continental   1.0
-    ## 10              air    Moderate   1.0
-    ## 41      naturalsoil      Arctic   0.2
-    ## 42      naturalsoil Continental   0.2
-    ## 43      naturalsoil    Moderate   0.2
-    ## 44      naturalsoil    Regional   0.2
-    ## 45      naturalsoil      Tropic   0.2
-    ## 46        othersoil Continental   0.2
-    ## 49        othersoil    Regional   0.2
+    ##          Scale         SubCompart old_FRACa FRACa
+    ## 1       Arctic                air       1.0   1.0
+    ## 2       Arctic freshwatersediment       0.0   0.0
+    ## 3       Arctic       lakesediment       0.0   0.0
+    ## 4       Arctic     marinesediment       0.0   0.0
+    ## 5       Arctic        naturalsoil       0.2   0.2
+    ## 6  Continental   agriculturalsoil       0.2   0.2
+    ## 7  Continental                air       1.0   1.0
+    ## 8  Continental freshwatersediment       0.0   0.0
+    ## 9  Continental       lakesediment       0.0   0.0
+    ## 10 Continental     marinesediment       0.0   0.0
+    ## 11 Continental        naturalsoil       0.2   0.2
+    ## 12 Continental          othersoil       0.2   0.2
+    ## 13    Moderate                air       1.0   1.0
+    ## 14    Moderate freshwatersediment       0.0   0.0
+    ## 15    Moderate       lakesediment       0.0   0.0
+    ## 16    Moderate     marinesediment       0.0   0.0
+    ## 17    Moderate        naturalsoil       0.2   0.2
+    ## 18    Regional   agriculturalsoil       0.2   0.2
+    ## 19    Regional                air       1.0   1.0
+    ## 20    Regional freshwatersediment       0.0   0.0
+    ## 21    Regional       lakesediment       0.0   0.0
+    ## 22    Regional     marinesediment       0.0   0.0
+    ## 23    Regional        naturalsoil       0.2   0.2
+    ## 24    Regional          othersoil       0.2   0.2
+    ## 25      Tropic                air       1.0   1.0
+    ## 26      Tropic freshwatersediment       0.0   0.0
+    ## 27      Tropic       lakesediment       0.0   0.0
+    ## 28      Tropic     marinesediment       0.0   0.0
+    ## 29      Tropic        naturalsoil       0.2   0.2
 
 ``` r
 World$NewCalcVariable("FRACw")
 World$CalcVar("FRACw")
 ```
 
-    ##            SubCompart       Scale FRACw
-    ## 3    agriculturalsoil    Regional 2e-01
-    ## 5    agriculturalsoil Continental 2e-01
-    ## 6                 air      Arctic 2e-11
-    ## 7                 air      Tropic 2e-11
-    ## 8                 air    Regional 2e-11
-    ## 9                 air Continental 2e-11
-    ## 10                air    Moderate 2e-11
-    ## 22 freshwatersediment Continental 8e-01
-    ## 24 freshwatersediment    Regional 8e-01
-    ## 32       lakesediment Continental 8e-01
-    ## 34       lakesediment    Regional 8e-01
-    ## 36     marinesediment      Arctic 8e-01
-    ## 37     marinesediment Continental 8e-01
-    ## 38     marinesediment    Moderate 8e-01
-    ## 39     marinesediment    Regional 8e-01
-    ## 40     marinesediment      Tropic 8e-01
-    ## 41        naturalsoil      Arctic 2e-01
-    ## 42        naturalsoil Continental 2e-01
-    ## 43        naturalsoil    Moderate 2e-01
-    ## 44        naturalsoil    Regional 2e-01
-    ## 45        naturalsoil      Tropic 2e-01
-    ## 46          othersoil Continental 2e-01
-    ## 49          othersoil    Regional 2e-01
+    ##          Scale         SubCompart old_FRACw FRACw
+    ## 1       Arctic                air     2e-11 2e-11
+    ## 2       Arctic     marinesediment     8e-01 8e-01
+    ## 3       Arctic        naturalsoil     2e-01 2e-01
+    ## 4  Continental   agriculturalsoil     2e-01 2e-01
+    ## 5  Continental                air     2e-11 2e-11
+    ## 6  Continental freshwatersediment     8e-01 8e-01
+    ## 7  Continental       lakesediment     8e-01 8e-01
+    ## 8  Continental     marinesediment     8e-01 8e-01
+    ## 9  Continental        naturalsoil     2e-01 2e-01
+    ## 10 Continental          othersoil     2e-01 2e-01
+    ## 11    Moderate                air     2e-11 2e-11
+    ## 12    Moderate     marinesediment     8e-01 8e-01
+    ## 13    Moderate        naturalsoil     2e-01 2e-01
+    ## 14    Regional   agriculturalsoil     2e-01 2e-01
+    ## 15    Regional                air     2e-11 2e-11
+    ## 16    Regional freshwatersediment     8e-01 8e-01
+    ## 17    Regional       lakesediment     8e-01 8e-01
+    ## 18    Regional     marinesediment     8e-01 8e-01
+    ## 19    Regional        naturalsoil     2e-01 2e-01
+    ## 20    Regional          othersoil     2e-01 2e-01
+    ## 21      Tropic                air     2e-11 2e-11
+    ## 22      Tropic     marinesediment     8e-01 8e-01
+    ## 23      Tropic        naturalsoil     2e-01 2e-01
 
 ``` r
 World$NewCalcVariable("FRACs")
 World$CalcVar("FRACs")
 ```
 
-    ##            SubCompart       Scale FRACs
-    ## 3    agriculturalsoil    Regional 6e-01
-    ## 5    agriculturalsoil Continental 6e-01
-    ## 6                 air      Arctic 2e-11
-    ## 7                 air      Tropic 2e-11
-    ## 8                 air    Regional 2e-11
-    ## 9                 air Continental 2e-11
-    ## 10                air    Moderate 2e-11
-    ## 22 freshwatersediment Continental 2e-01
-    ## 24 freshwatersediment    Regional 2e-01
-    ## 32       lakesediment Continental 2e-01
-    ## 34       lakesediment    Regional 2e-01
-    ## 36     marinesediment      Arctic 2e-01
-    ## 37     marinesediment Continental 2e-01
-    ## 38     marinesediment    Moderate 2e-01
-    ## 39     marinesediment    Regional 2e-01
-    ## 40     marinesediment      Tropic 2e-01
-    ## 41        naturalsoil      Arctic 6e-01
-    ## 42        naturalsoil Continental 6e-01
-    ## 43        naturalsoil    Moderate 6e-01
-    ## 44        naturalsoil    Regional 6e-01
-    ## 45        naturalsoil      Tropic 6e-01
-    ## 46          othersoil Continental 6e-01
-    ## 49          othersoil    Regional 6e-01
+    ##          Scale         SubCompart old_FRACs FRACs
+    ## 1       Arctic                air     2e-11 2e-11
+    ## 2       Arctic     marinesediment     2e-01 2e-01
+    ## 3       Arctic        naturalsoil     6e-01 6e-01
+    ## 4  Continental   agriculturalsoil     6e-01 6e-01
+    ## 5  Continental                air     2e-11 2e-11
+    ## 6  Continental freshwatersediment     2e-01 2e-01
+    ## 7  Continental       lakesediment     2e-01 2e-01
+    ## 8  Continental     marinesediment     2e-01 2e-01
+    ## 9  Continental        naturalsoil     6e-01 6e-01
+    ## 10 Continental          othersoil     6e-01 6e-01
+    ## 11    Moderate                air     2e-11 2e-11
+    ## 12    Moderate     marinesediment     2e-01 2e-01
+    ## 13    Moderate        naturalsoil     6e-01 6e-01
+    ## 14    Regional   agriculturalsoil     6e-01 6e-01
+    ## 15    Regional                air     2e-11 2e-11
+    ## 16    Regional freshwatersediment     2e-01 2e-01
+    ## 17    Regional       lakesediment     2e-01 2e-01
+    ## 18    Regional     marinesediment     2e-01 2e-01
+    ## 19    Regional        naturalsoil     6e-01 6e-01
+    ## 20    Regional          othersoil     6e-01 6e-01
+    ## 21      Tropic                air     2e-11 2e-11
+    ## 22      Tropic     marinesediment     2e-01 2e-01
+    ## 23      Tropic        naturalsoil     6e-01 6e-01
 
 ``` r
-#the SubCompart associated with Arctic, Moderate, Tropic scales is "naturalsoil" in the input of FRACw, FRACa amd FRACs. This is required to make sure the same FRorig is used as in the excel version (that of natural soil). This is currently in contrast to other parts of the model where the SubCompart of global scales are "othersoil". See issue #18
-
-# World$fetchData("FRACw")
-# World$fetchData("FRACs")
-# World$fetchData("Kp")
-# World$fetchData("rhoMatrix")
-# World$fetchData("Matrix")
-
 #partition coefficients
 World$NewCalcVariable("Ksdcompw") #sediment/water
 World$CalcVar("Ksdcompw")
 ```
 
-    ##            SubCompart       Scale Ksdcompw
-    ## 22 freshwatersediment Continental 14.87125
-    ## 24 freshwatersediment    Regional 14.87125
-    ## 32       lakesediment Continental 14.87125
-    ## 34       lakesediment    Regional 14.87125
-    ## 36     marinesediment      Arctic 12.18913
-    ## 37     marinesediment Continental 12.18913
-    ## 38     marinesediment    Moderate 12.18913
-    ## 39     marinesediment    Regional 12.18913
-    ## 40     marinesediment      Tropic 12.18913
+    ##         Scale         SubCompart old_Ksdcompw Ksdcompw
+    ## 1      Arctic     marinesediment     12.18913 12.18913
+    ## 2 Continental freshwatersediment     14.87125 14.87125
+    ## 3 Continental       lakesediment     14.87125 14.87125
+    ## 4 Continental     marinesediment     12.18913 12.18913
+    ## 5    Moderate     marinesediment     12.18913 12.18913
+    ## 6    Regional freshwatersediment     14.87125 14.87125
+    ## 7    Regional       lakesediment     14.87125 14.87125
+    ## 8    Regional     marinesediment     12.18913 12.18913
+    ## 9      Tropic     marinesediment     12.18913 12.18913
 
 ``` r
 World$NewCalcVariable("Kscompw") #soil/water
 World$CalcVar("Kscompw")
 ```
 
-    ##          SubCompart       Scale  Kscompw
-    ## 2  agriculturalsoil    Regional 17.08551
-    ## 3  agriculturalsoil Continental 17.08551
-    ## 41      naturalsoil    Regional 17.55396
-    ## 42      naturalsoil      Arctic 17.55395
-    ## 43      naturalsoil      Tropic 17.55398
-    ## 44      naturalsoil    Moderate 17.55396
-    ## 45      naturalsoil Continental 17.55396
-    ## 46        othersoil Continental 17.08551
-    ## 49        othersoil    Regional 17.08551
+    ##         Scale       SubCompart old_Kscompw  Kscompw
+    ## 1      Arctic      naturalsoil    17.55395 17.55395
+    ## 2 Continental agriculturalsoil    17.08551 17.08551
+    ## 3 Continental      naturalsoil    17.55396 17.55396
+    ## 4 Continental        othersoil    17.08551 17.08551
+    ## 5    Moderate      naturalsoil    17.55396 17.55396
+    ## 6    Regional agriculturalsoil    17.08551 17.08551
+    ## 7    Regional      naturalsoil    17.55396 17.55396
+    ## 8    Regional        othersoil    17.08551 17.08551
+    ## 9      Tropic      naturalsoil    17.55398 17.55398
 
-## Fraction chemical in gas, water or solid phase
+#### Fraction chemical in gas, water or solid phase
 
 The fractions of the chemical in the gas, water and solid phase of a
 compartment are calculated as variables with the following functions:
@@ -502,72 +554,72 @@ World$NewCalcVariable("FRingas")
 World$CalcVar("FRingas")
 ```
 
-    ##    SubCompart       Scale   FRingas
-    ## 6         air      Tropic 0.9999857
-    ## 7         air Continental 0.9999856
-    ## 8         air      Arctic 0.9999845
-    ## 9         air    Regional 0.9999856
-    ## 10        air    Moderate 0.9999856
+    ##         Scale SubCompart old_FRingas   FRingas
+    ## 1      Arctic        air   0.9999845 0.9999845
+    ## 2 Continental        air   0.9999856 0.9999856
+    ## 3    Moderate        air   0.9999856 0.9999856
+    ## 4    Regional        air   0.9999856 0.9999856
+    ## 5      Tropic        air   0.9999857 0.9999857
 
 ``` r
 World$NewCalcVariable("FRinaers")
 World$CalcVar("FRinaers")
 ```
 
-    ##    SubCompart       Scale     FRinaers
-    ## 6         air      Arctic 1.413643e-05
-    ## 7         air Continental 1.413645e-05
-    ## 8         air    Moderate 1.413645e-05
-    ## 9         air    Regional 1.413645e-05
-    ## 10        air      Tropic 1.413645e-05
+    ##         Scale SubCompart old_FRinaers     FRinaers
+    ## 1      Arctic        air 1.413643e-05 1.413643e-05
+    ## 2 Continental        air 1.413645e-05 1.413645e-05
+    ## 3    Moderate        air 1.413645e-05 1.413645e-05
+    ## 4    Regional        air 1.413645e-05 1.413645e-05
+    ## 5      Tropic        air 1.413645e-05 1.413645e-05
 
 ``` r
 World$NewCalcVariable("FRinaerw")
 World$CalcVar("FRinaerw")
 ```
 
-    ##    SubCompart       Scale     FRinaerw
-    ## 6         air      Arctic 1.381064e-06
-    ## 7         air Continental 2.675812e-07
-    ## 8         air    Moderate 2.675812e-07
-    ## 9         air    Regional 2.675812e-07
-    ## 10        air      Tropic 1.140049e-07
+    ##         Scale SubCompart old_FRinaerw     FRinaerw
+    ## 1      Arctic        air 1.381188e-06 1.381188e-06
+    ## 2 Continental        air 2.675797e-07 2.675797e-07
+    ## 3    Moderate        air 2.675797e-07 2.675797e-07
+    ## 4    Regional        air 2.675797e-07 2.675797e-07
+    ## 5      Tropic        air 1.139986e-07 1.139986e-07
 
 ``` r
 World$NewCalcVariable("FRinw")
 World$CalcVar("FRinw")
 ```
 
-    ##          SubCompart       Scale      FRinw
-    ## 3  agriculturalsoil    Regional 0.01170583
-    ## 5  agriculturalsoil Continental 0.01170583
-    ## 16        deepocean Continental 0.92462417
-    ## 17        deepocean    Regional 0.92462417
-    ## 18        deepocean      Tropic 0.92462417
-    ## 19        deepocean    Moderate 0.92462417
-    ## 20        deepocean      Arctic 0.92462417
-    ## 26             lake    Moderate 0.92472811
-    ## 27             lake      Tropic 0.92472811
-    ## 28             lake Continental 0.92472811
-    ## 29             lake      Arctic 0.92472811
-    ## 30             lake    Regional 0.92472811
-    ## 41      naturalsoil      Arctic 0.01139345
-    ## 42      naturalsoil Continental 0.01139344
-    ## 43      naturalsoil    Moderate 0.01139344
-    ## 44      naturalsoil    Regional 0.01139344
-    ## 45      naturalsoil      Tropic 0.01139343
-    ## 46        othersoil    Regional 0.01170583
-    ## 48        othersoil Continental 0.01170583
-    ## 51            river    Regional 0.92408233
-    ## 52            river      Arctic 0.92408233
-    ## 53            river Continental 0.92408233
-    ## 54            river    Moderate 0.92408233
-    ## 55            river      Tropic 0.92408233
-    ## 56              sea      Arctic 0.92462417
-    ## 57              sea    Moderate 0.92462417
-    ## 58              sea    Regional 0.92462417
-    ## 59              sea Continental 0.92462417
-    ## 60              sea      Tropic 0.92462417
+    ##          Scale       SubCompart  old_FRinw      FRinw
+    ## 1       Arctic        deepocean 0.99977106 0.99977106
+    ## 2       Arctic             lake 0.99989258 0.99989258
+    ## 3       Arctic      naturalsoil 0.01139345 0.01139345
+    ## 4       Arctic            river 0.99913760 0.99913760
+    ## 5       Arctic              sea 0.99977106 0.99977106
+    ## 6  Continental agriculturalsoil 0.01170583 0.01170583
+    ## 7  Continental        deepocean 0.99977106 0.99977106
+    ## 8  Continental             lake 0.99989258 0.99989258
+    ## 9  Continental      naturalsoil 0.01139344 0.01139344
+    ## 10 Continental        othersoil 0.01170583 0.01170583
+    ## 11 Continental            river 0.99913760 0.99913760
+    ## 12 Continental              sea 0.99977106 0.99977106
+    ## 13    Moderate        deepocean 0.99977106 0.99977106
+    ## 14    Moderate             lake 0.99989258 0.99989258
+    ## 15    Moderate      naturalsoil 0.01139344 0.01139344
+    ## 16    Moderate            river 0.99913760 0.99913760
+    ## 17    Moderate              sea 0.99977106 0.99977106
+    ## 18    Regional agriculturalsoil 0.01170583 0.01170583
+    ## 19    Regional        deepocean 0.99977106 0.99977106
+    ## 20    Regional             lake 0.99989258 0.99989258
+    ## 21    Regional      naturalsoil 0.01139344 0.01139344
+    ## 22    Regional        othersoil 0.01170583 0.01170583
+    ## 23    Regional            river 0.99913760 0.99913760
+    ## 24    Regional              sea 0.99977106 0.99977106
+    ## 25      Tropic        deepocean 0.99977106 0.99977106
+    ## 26      Tropic             lake 0.99989258 0.99989258
+    ## 27      Tropic      naturalsoil 0.01139343 0.01139343
+    ## 28      Tropic            river 0.99913760 0.99913760
+    ## 29      Tropic              sea 0.99977106 0.99977106
 
 ``` r
 World$NewCalcVariable("FRins")
@@ -575,39 +627,17 @@ World$CalcVar("FRins")
 ```
 
     ##          SubCompart       Scale     FRins
-    ## 1  agriculturalsoil Continental 0.9882934
-    ## 5  agriculturalsoil    Regional 0.9882934
-    ## 41      naturalsoil      Arctic 0.9886064
-    ## 42      naturalsoil    Moderate 0.9886057
-    ## 43      naturalsoil    Regional 0.9886057
-    ## 44      naturalsoil      Tropic 0.9886046
-    ## 45      naturalsoil Continental 0.9886057
-    ## 47        othersoil    Regional 0.9882934
-    ## 50        othersoil Continental 0.9882934
+    ## 2  agriculturalsoil Continental 0.9882934
+    ## 3  agriculturalsoil    Regional 0.9882934
+    ## 36      naturalsoil    Regional 0.9886057
+    ## 37      naturalsoil      Arctic 0.9886064
+    ## 38      naturalsoil Continental 0.9886057
+    ## 39      naturalsoil      Tropic 0.9886046
+    ## 40      naturalsoil    Moderate 0.9886057
+    ## 42        othersoil    Regional 0.9882934
+    ## 45        othersoil Continental 0.9882934
 
 These variables described the partitioning constants. The speed in which
-the equilibria are reached is modelled by diffusion processes, like
+the equilibrium are reached is modelled by diffusion processes, like
 volatilisation and absorption. This is described in a separate vignette,
 namely DiffusionProcesses.
-
-A source script is available for testing purposes to prepare all
-variables related to partitioning in one go. The script requires that
-you first have defined a substance (if you want to run the model with a
-substance other than the default) and that you have initialized the
-“World”.
-
-``` r
-substance <- "organic acid"
-# substance <- "Ag(I)"
-source(paste(getwd(),"baseScripts/initTestWorld.R", sep="/"))
-```
-
-    ## Joining with `by = join_by(Matrix)`
-    ## Joining with `by = join_by(Compartment)`
-    ## Joining with `by = join_by(sheet, row)`
-
-``` r
-source(paste(getwd(),"testScripts/initPartitioningVariables.R", sep="/"))
-```
-
-    ## Warning in eval(ei, envir): Ksw calculated by f_Ksw
